--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+/* * {
+    border: 1px solid white;
+} */
 
+html {
+    width: 100vw;
+}
 
 body {
     margin: 0;
@@ -8,8 +14,7 @@ body {
     font-family: 'Poppins', sans-serif;
     color: gray;
     background-color: black;
-    max-width: 100vw;
-   
+
 }
 
 .main-container {
@@ -21,7 +26,6 @@ body {
 /* section 1 styles */
 
 .section1 {
-    /* border: 2px solid blue; */
     padding: 15px;
 }
 
@@ -38,15 +42,19 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 60%;
-    /* border: 1px solid white; */
-    padding: 10px;
-    line-height: 20px;
     align-items: center;
+    justify-content: start;
+    padding-left: 30px;
+}
+
+
+.name-header-container {
+    text-align: start;
 }
 
 
 .box1>img {
-    height: 200px;
+    height: 250px;
     margin-right: 20px;
 }
 
@@ -60,13 +68,14 @@ body {
 }
 
 /* box 2 */
-
 .box2 {
-    width: 40%;
-    /* border: 1px solid white; */
-    flex-flow: column wrap;
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
 }
+
+
 
 .box2>p {
     font-size: 16px;
@@ -85,9 +94,7 @@ body {
 
 .contact-info-container {
     display: flex;
-    flex-wrap: wrap;
     font-size: 20px;
-    height: 25px;
     word-wrap: break-word;
 }
 
@@ -95,18 +102,19 @@ body {
     width: 29%;
     text-align: end;
     color: white;
+    margin: 0 10px 0 0;
 }
 
 .value {
     margin-left: 5px;
-    width: 69%;
+    /* width: 69%; */
     font-weight: 400;
+    margin: 0 0 0 10px;
 }
 
 /* box 3 */
 
 .box3 {
-    /* border: 1px solid white; */
     padding: 10px;
     height: fit-content;
 }
@@ -120,8 +128,7 @@ body {
 
 .section2 {
     width: 70%;
-    /* height: 700px; */
-    /* border: 1px solid white; */
+
     padding-top: 40px;
 
 }
@@ -151,14 +158,12 @@ body {
 
 
 .employment-item-container {
-    /* border: 1px solid white; */
     width: 95%;
     margin: 30px auto;
     word-wrap: break-word;
 }
 
 .employment-item-header-container {
-    /* border: 1px solid white; */
     display: flex;
     align-items: center;
     padding: 10px;
@@ -196,15 +201,12 @@ body {
 .job-description-container {
     padding: 10px;
     word-wrap: break-word;
-    /* width: auto; */
 }
 
 /* section 3 */
 
 .section3 {
-    /* border: 1px solid white; */
     width: 30%;
-    /* height: 740px; */
     display: flex;
     flex-direction: column;
 }
@@ -232,7 +234,6 @@ body {
 }
 
 .skill-bar {
-    /* height: 20px; */
     background-color: darkgray;
 }
 
@@ -282,15 +283,14 @@ body {
     vertical-align: middle;
 }
 
-.graphic-skill-container{
+.graphic-skill-container {
     display: flex;
     align-items: center;
     gap: 20px;
-    /* height: 35px; */
 }
 
 
-.square-bullet{
+.square-bullet {
     height: 20px;
     width: 20px;
 }
@@ -315,11 +315,11 @@ body {
 
 
 .langauge-skill-container {
-display: flex;
-align-items: center;
-width:fit-content;
+    display: flex;
+    align-items: center;
+    width: fit-content;
 }
 
-.langauge-skill-container > h3 {
+.langauge-skill-container>h3 {
     margin-right: 2rem;
 }
